<resources>
    <string name="app_name">Teletalker</string>
    <string name="have_account">Already Have an Account ?</string>
    <string name="login_now">Login Now</string>
    <string name="send">Send\n</string>
    <string name="forget_password_activity_title">Forget Password</string>
    <string name="accessibility_service_description">accessibility service description</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Please enter a valid email </string>
    <string name="prompt_password">Please enter a valid password </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome !</string>
    <string name="invalid_username">Invalid Email</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="login">Login</string>
    <string name="on_boarding_text_content">اسمع، عدّل الدوزان، حدد البداية والنهاية للمقطع الذي تريده وتعلم العزف بشكل سماعي معنا!</string>
    <string name="on_boarding_text">Welcome to</string>
    <string name="app_name_ar">سماعي</string>
    <string name="skip">Skip</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="dont_have_account">Dont\'t have an account</string>
    <string name="register_now">Register Now</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="username">User Name</string>
    <string name="prompt_username">Name</string>
    <string name="prompt_phone">XX-XXX-XXX</string>
    <string name="agree_on">Agree On</string>
    <string name="terms_and_condotion">Terms And Condition</string>
    <string name="register">Register</string>
    <string name="title_activity_forget_password">ForgetPasswordActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_youtube">"Youtube "</string>
    <string name="title_tuning">Tuner</string>
    <string name="cancel">Cancel</string>
    <string name="importing_audio_file_title">استيراد ملف صوتي</string>
    <string name="importing_audio_file_content">"سيتم حفظ هذا الملف كملف صوتي في التطبيق, بإمكانك تسميه الملف الصوتي "</string>
    <string name="prompt_renaming">مثال: حب أيه</string>
    <string name="save">حفظ</string>
    <string name="loading_audio">جاري معالجة الملف الصوتي ..</string>
    <string name="loading_video">جاري معالجة الملف ..</string>
    <string name="enter_correct_name">الرجاء ادخال اسم صحيح للملف</string>
    <string name="please_pick_a_valid_media">الرجاء اختباد ملف صالح</string>
    <string name="learn_with_samaei">تعلم العزف بسهولة مع تطبيق سماعي</string>
    <string name="samaei">" سماعي"</string>
    <string name="learn_with_samaei_content">نساعدك على التدريب وعزف الآلات الموسيقية بشكل سماعي </string>
    <string name="hello">"أهلا بك "</string>
    <string name="start_now">ابدأ الآن</string>
    <string name="sound_too_long">مدة المقطع قصيرة جداً, هذه الميزة تعمل مع المقاطع الطويلة فقط</string>
    <string name="start_time_too_long">نقطة البداية قصيرة جداً</string>
    <string name="end_time_too_long">نقطة النهاية قصيرة جداً</string>
    <string name="no_way_to_select_start_higher_than_end">لا يمكن تحديد نقطة بداية أعلى من نقطة النهاية</string>
    <string name="speed">السرعة</string>
    <string name="pitch_tv">الطبقة</string>
    <string name="prop_rights_radio">إنتهاك حقوق الملكية</string>
    <string name="content_radio">محتوى غير لائق</string>
    <string name="non_music_radio">محتوى غير موسيقي</string>
    <string name="others_radio">أسباب أخرى</string>
    <string name="report_dialog_title">الأبلاغ عن المحتوى</string>
    <string name="report_hint">الرجاء إدخال سبب البلاغ</string>
    <string name="report">إبلاغ</string>
    <string name="title">العنوان</string>
    <string name="add_title_here">..ادخل عنوان المقطع هنا</string>
    <string name="artist_name">اسم الفنان</string>
    <string name="write_here">أكتب هنا</string>
    <string name="maqam">المقام</string>
    <string name="maqam_here">"..أكتب اسم المقام هنا "</string>
    <string name="drum">الإيقاع</string>
    <string name="drum_here">"..أكتب اسم الإيقاع هنا "</string>
    <string name="contiue">إستمرار</string>
    <string name="do_you_want_to_delete">هل تريد بالفعل حذف للمقطع الصوتي؟</string>
    <string name="delete_message">لا يمكنك استعادة المقطع بعد حذفه، هل تريد بالفعل حذفه؟</string>
    <string name="delete">حذف</string>
    <string name="rename">إعادة تسمية الملف الصوتي</string>
    <string name="rename_text">أعد تسمية ملف الصوت</string>
    <string name="renaming">إعادة التسمية</string>
    <string name="please_enter_valid_name">الرجاء ادخال اسم صحيح</string>
    <string name="failed_to_add">"الملف موجود مسبقا "</string>
    <string name="file_added_successfully">تم اضافة الملف بنجاح</string>
    <string name="username_or_email">خطآ في اسم المستخدم او كلمة المرور</string>
    <string name="error_user_exists">المستخدم موجود مسبقا، يمكنك اعادة ضبط كلمة المرور</string>
    <string name="error_email_exists">البريد الالكتروني موجود مسبقا</string>
    <string name="error_invalid_email">خطآ في البريد الالكتروني</string>
    <string name="error_weak_password">"خطآ في كلمة المرور، يرجى ادخال كلمة مرور قوية  "</string>
    <string name="weak_password">" يرجى ادخال كلمة مرور قوية "</string>
    <string name="error_register">يرجى التآكد من صحة البيانات</string>
    <string name="email_sent">تم ارسال  بريد استرداد كلمة المرور  بنجاح يرجى تفقد البريد الالكتروني الخاص بك</string>
    <string name="user_profile">الملف الشخصي</string>
    <string name="my_profile">حسابي</string>
    <string name="setting">اعدادات الملفات الصوتية</string>
    <string name="membership">العضوية</string>
    <string name="app_version">اصدار التطبيق</string>
    <string name="more">المزيد</string>
    <string name="privacy">Privacy Policy</string>
    <string name="terms">Terms and Conditions</string>
    <string name="refund">إستعادة المشتريات</string>
    <string name="support">الدعم الفني</string>
    <string name="follow_on">تابعنا على</string>
    <string name="all_rights">"2020-2023  Samaei , Octavey © جميع الحقوق محفوظة "</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="edite_user_profile">تعديل اسم المستخدم</string>
    <string name="edite_password">تعديل كلمة المرور</string>
    <string name="delete_account">حذف الحساب</string>
    <string name="edite_user_account">تعديل الملف الشخصي</string>
    <string name="password_reset">Password Reset</string>
    <string name="current_password">Current Password</string>
    <string name="current_password_hint">Enter Current Password</string>
    <string name="prompt_password_confirm">Enter Password Confirmation</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="reset_ps">Reset</string>
    <string name="are_you_sure_to_delete_account">هل أنت متأكد من أنك تريد حذف حسابك نهائياَ ؟</string>
    <string name="are_you_sure_to_delete_account_detailes1">حذف الحساب لن يلغي الفتره المتبقية من اشتراكك المدفوع إن وجد.</string>
    <string name="are_you_sure_to_delete_account_detailes2">سيتم حذف جميع البيانات الخاصة بك من سيرفراتنا بما فيها الرصيد المتبقي من النقاط ولن نتمكن من إستعادتها أبداً.</string>
    <string name="are_you_sure_to_delete_account_detailes3">إذا كانت لديك مشاكل تقنية فلا تتردد بالتواصل معنا وسنقوم جاهدين بمساعدتك.</string>
    <string name="agree_on_terms">لقد قرأت الشروط والأحكام</string>
    <string name="reason_of_deletion">أريد حذف حسابي بسبب :</string>
    <string name="no_longer_use_the_app">لم اعد استخدم التطبيق</string>
    <string name="need_new_account">اريد انشاء حساب جديد</string>
    <string name="other_reason">أسباب أخرى</string>
    <string name="subsription_issues">مشاكل بالاشتراك</string>
    <string name="delete_account_detailes">نريد أن تساعدنا في تحسين تجربته استخدامك، لماذا  تريد حذف حسابك في سماعي؟</string>
    <string name="delete_reson_hint">أخبرنا أكثر عن السبب</string>
    <string name="setting_page">ضبط الأعدادات</string>
    <string name="delete_all_files">حذف جميع الملفات</string>
    <string name="delete_all_files_detailes">حذف الملفات المؤقته والمحفوظة</string>
    <string name="please_read_terms">يجب الموافقة على الشروط و الاحكام لتتمكن من حذف الحساب</string>
    <string name="do_you_want_to_delete_cash_data">هل تريد حذف الملفات المؤقته؟</string>
    <string name="do_you_want_to_delete_all_data">هل تريد حذف الملفات المؤقته والمحفوظة؟</string>
    <string name="delete_message_all_data">حذف الملفات المؤقته سيزيد من سرعة التشغيل ولكن سيزيد من استهلاك مساحة الهاتف</string>
    <string name="error_reset_password">حدث خطآ ما ، حاول مرة اخرى</string>
    <string name="success_reset_password">"تمت اعادة ضبط كلمة المرور بنجاح "</string>
    <string name="password_must_be_same">كلمة المرور غير متطابقة</string>
    <string name="must_be_defferant">يجب ان تكون كلمة المرور مختلفة عن السابقة</string>
    <string name="addphoto">اضافة صورة الحساب</string>
    <string name="choosefromgallery">اختيار من معرض الصور</string>
    <string name="takeaphoto">التقاط من الكاميرا</string>
    <string name="camera_access_required">السماح للوصول للكاميرا مطلوب لاجراء هذه العملية</string>
    <string name="storage_premission_required">"اذن الوصول للذاكرة الداخلية مطلوب "</string>
    <string name="max_images_reached">" لا يمكن رفع اكثر من صورة واحدة"</string>
    <string name="email_updated">"تم تعديل البريد الالكتروني بنجاح "</string>
    <string name="profile_image_updated">تم تعديل صورة الحساب بنجاح</string>
    <string name="profile_name_updated">تم تعديل اسم المستخدم  بنجاح</string>
    <string name="do_you_want_to_logout">هل تريد بالتاكيد تسجيل الخروج من الحساب ؟</string>
    <string name="have_to_accept_terms">"يجب الموافقة على الشروط والاحكام "</string>
    <string name="snap_not_exist">تطبيق سناب شات غير محمل على جوالك</string>
    <string name="telegram_not_exist">تطبيق تليجرام غير محمل على جوالك</string>
    <string name="wp_not_exist">تطبيق الوالتساب غير محمل على جوالك</string>
    <string name="premuim_version">النسخة الإحترافية</string>
    <string name="text_prmuim">أشترك اللآن، وتمتع بوصول غير محدود لكل مزايا سماعي:</string>
    <string name="text_prmuim_1">إمكانية البحث في مكتبة سماعي</string>
    <string name="text_prmuim_2">إمكانية التحكم بطبقة الملف الصوتي</string>
    <string name="text_prmuim_3">إمكانية إضافة عدد لا محدود من الملفات الصوتية</string>
    <string name="text_prmuim_1_4">إمكانية البحث في اليوتيوب عن مقاطع الفيديو</string>
    <string name="other_features">مزيد من المزايا</string>
    <string name="select_now">أختر خطة الأشتراك الأحترافية :</string>
    <string name="supscripe">إشترك الآن</string>
    <string name="you_can_cancel">يمكن الألغاء في أي وقت</string>
    <string name="usage_agreement">إتفاقية الإستخدام</string>
    <string name="text_prmuim_4">إمكانية إضافة ملفات صوتية تصل مدتها لأكثر من 10 دقائق</string>
    <string name="somthing_went_wrong">هناك خطآ ما ، حاول مرة اخرى</string>
    <string name="searchbar_hint">البحث</string>
    <string name="end_point">" نقطه النهاية"</string>
    <string name="start_point">" نقطه البداية"</string>
    <string name="str_a">(A)</string>
    <string name="str_b">(B)</string>
    <string name="apply">تطبيق</string>
    <string name="please_select_valid_endRange">الرجاء تحديد نقطة نهاية صالحة</string>
    <string name="and">&amp;</string>
    <string name="join_now">Join now and unlock 1000+ voice effects instantly</string>
    <string name="title_call_history">Call History</string>
    <string name="title_calender">Calender</string>
    <string name="title_settings">Settings</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome_back">Welcome Back! 👋</string>
    <string name="great_to_see_you_again_you_ve_been_missed">Great to see you again, You\'ve been missed!</string>
    <string name="sign_up">Sign Up</string>
</resources>