<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageButton
            android:id="@+id/exit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:src="@drawable/ic_exit"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/horizontal_margin"
            android:layout_marginTop="40dp"
            android:textSize="24sp"
            android:text="Creat Your Account"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/exit_btn"
            />


        <TextView
            android:id="@+id/textView13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:text="@string/join_now"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:gravity="center"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />


        <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="@dimen/edt_hgt"
            android:layout_marginHorizontal="@dimen/horizontal_margin"
            android:layout_marginTop="22dp"
            android:autofillHints="@string/prompt_username"
            android:background="@drawable/edit_text_back"
            android:drawableLeft="@drawable/ic_user_tf"
            android:gravity="left|center"
            android:hint="@string/prompt_username"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="16dp"

            android:selectAllOnFocus="true"
            android:textColorHint="@color/text_gray_hint"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />


        <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="@dimen/edt_hgt"
            android:layout_marginHorizontal="@dimen/horizontal_margin"
            android:layout_marginTop="20dp"
            android:autofillHints="@string/prompt_email"
            android:background="@drawable/edit_text_back"
            android:gravity="left|center"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="16dp"
            android:drawableStart="@drawable/ic_email"
            android:selectAllOnFocus="true"
            android:textColorHint="@color/text_gray_hint"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />


        <LinearLayout
            android:id="@+id/phone_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/horizontal_margin"
            android:layout_marginTop="20dp"

            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email">




            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edt_hgt"
                android:layout_marginStart="8dp"
                android:autofillHints="@string/prompt_phone"
                android:background="@drawable/edit_text_back"
                android:gravity="left|center"
                android:hint="@string/prompt_phone"
                android:inputType="numberDecimal"
                android:paddingHorizontal="16dp"
                android:selectAllOnFocus="true"
                android:textColorHint="@color/text_gray_hint"
                android:textSize="14sp" />

        </LinearLayout>


        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="@dimen/edt_hgt"
            android:layout_marginHorizontal="@dimen/horizontal_margin"
            android:layout_marginTop="20dp"
            android:autofillHints="@string/prompt_password"
            android:background="@drawable/edit_text_back"
            android:gravity="left|center"
            android:hint="@string/prompt_password"
            android:drawableLeft="@drawable/ic_lock"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingHorizontal="16dp"
            android:selectAllOnFocus="true"
            android:textColorHint="@color/text_gray_hint"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_container" />


        <ImageButton
            android:id="@+id/show_password_btn"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:background="@android:color/transparent"
            android:elevation="22dp"

            android:src="@drawable/ic_show_password"
            app:layout_constraintBottom_toBottomOf="@+id/password"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintTop_toTopOf="@+id/password" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />


        <LinearLayout
            android:id="@+id/terms_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password">

            <CheckBox
                android:id="@+id/terms_check_box"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:text="@string/agree_on"
                android:textColor="@color/black"

                android:textSize="12sp" />

            <TextView
                android:id="@+id/terms_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_marginEnd="2dp"
                android:text="@string/terms_and_condotion"
                android:textColor="@color/purple_500"

                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
                tools:layout_editor_absoluteY="587dp" />

            <TextView
                android:id="@+id/and_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_marginEnd="2dp"
                android:gravity=""
                android:text="@string/and"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
                tools:layout_editor_absoluteY="587dp" />

            <TextView
                android:id="@+id/privacy_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_marginEnd="2dp"
                android:gravity=""
                android:text="@string/privacy"
                android:textColor="@color/purple_500"

                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
                tools:layout_editor_absoluteY="587dp" />


        </LinearLayout>



        <com.google.android.material.button.MaterialButton
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_hg"
            android:layout_gravity="start"
            android:layout_marginHorizontal="@dimen/horizontal_margin"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/purple_700"
            android:elevation="0dp"
            android:enabled="false"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:stateListAnimator="@null"
            android:text="@string/register"
            android:textColor="@color/colorPrimaryDark"
            app:cornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/terms_container"
            app:strokeColor="@color/purple_700"
            app:strokeWidth="1dp" />


        <LinearLayout
            android:id="@+id/have_account_continer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="44dp"
            android:gravity="center|bottom"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/have_account"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="italic" />
            <TextView
                android:id="@+id/login_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_now"
                android:textColor="@color/purple_700"
                android:textSize="14sp"
                android:textStyle="italic" />


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>